[package]
name = "logger"
version = "0.1.1"
edition = "2021"
description = "write to file logs/type_%Y-%m-%d_%H-%M-%S a text"
license = "MIT" 
authors = ".ajl and more"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"